Fix title spacing again

--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,9 @@
   flex: 1 1 auto;
   overflow: auto
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
